[metadata]
name = introspection_lib
version = 0.4.0
author = Anton Azarov
author_email = a.azarov@diagnoptics.com
description = Python introspection framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/diagnoptics/python/introspection_lib
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.6
package_dir =
    introspection_lib =
packages = introspection_lib, introspection_lib.Tests

[options.package_data]
* = dependencies.json